--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -198,7 +198,8 @@ h5 {
   align-items: center;
   justify-content: center;
   /* background-color: var(--color-links); */
-  color: var(--color-background);
+  color: #EFF5F5;
+  background-color: #497174;
   font-family: var(--font-display);
   font-weight: bold;
   line-height: 1;
@@ -207,7 +208,7 @@ h5 {
   padding: 0.625em 1em;
   border: 0;
   border-radius: 4px;
-  box-shadow: 0 var(--shadow-size) 0 0 var(--shadow-color);
+  /* box-shadow: 0 var(--shadow-size) 0 0 var(--shadow-color); */
   outline-offset: 2px;
   transform: translateY(0);
   transition: background-color 50ms ease-out, box-shadow 50ms ease-out,
@@ -218,7 +219,7 @@ h5 {
   --raise: 1px;
   color: var(--color-background);
   text-decoration: none;
-  box-shadow: 0 calc(var(--shadow-size) + var(--raise)) 0 0 var(--shadow-color);
+  /* box-shadow: 0 calc(var(--shadow-size) + var(--raise)) 0 0 var(--shadow-color); */
   transform: translateY(calc(var(--raise) * -1));
 }
 
@@ -226,7 +227,8 @@ h5 {
   --press: 1px;
   box-shadow: 0 calc(var(--shadow-size) - var(--press)) 0 0 var(--shadow-color);
   transform: translateY(var(--press));
-  background-color: var(--color-links-hover);
+  background-color: #EFF5F5;
+  color: #497174;
 }
 
 .button[disabled],
@@ -247,6 +249,7 @@ form {
   flex-direction: column;
   gap: 1rem;
   width: 100%;
+  color: #497174;
 }
 
 fieldset {
