--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -1,4 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Montserrat:wght@300&display=swap");
+
 :root {
+  font-family: "Comfortaa", cursive;
+  font-family: "Montserrat", sans-serif;
   --hs-links: 48 100%;
   --color-foreground: #497174;
   --color-background: #d6e4e5;
@@ -154,36 +158,33 @@ h5 {
   align-items: center;
   flex-direction: column;
 }
-.btn-container
-{
+.btn-container {
   margin-top: 40px;
-
 }
-.signin-btn
-{
-   background-color: #EB6440;
-   color: black;
-   margin-top: 40px;
-   --shadow-color: hsl(var(--hs-links) 30%);
-   --shadow-size: 3px;
-   -webkit-appearance: none;
-   -moz-appearance: none;
-   cursor: pointer;
-   appearance: none;
-   display: inline-flex;
-   align-items: center;
-   justify-content: center;
-   font-size: 1.125rem;
-   margin: 0;
-   padding: 0.625em 1em;
-   width: 90%;
-   border: 0;
-   border-radius: 4px;
-   box-shadow: 0 var(--shadow-size) 0 0 var(--shadow-color);
-   outline-offset: 2px;
-   transform: translateY(0);
-   transition: background-color 50ms ease-out, box-shadow 50ms ease-out,
-     transform 100ms cubic-bezier(0.3, 0.6, 0.8, 1.25);
+.signin-btn {
+  background-color: #eb6440;
+  color: black;
+  margin-top: 40px;
+  --shadow-color: hsl(var(--hs-links) 30%);
+  --shadow-size: 3px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  cursor: pointer;
+  appearance: none;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.125rem;
+  margin: 0;
+  padding: 0.625em 1em;
+  width: 90%;
+  border: 0;
+  border-radius: 4px;
+  box-shadow: 0 var(--shadow-size) 0 0 var(--shadow-color);
+  outline-offset: 2px;
+  transform: translateY(0);
+  transition: background-color 50ms ease-out, box-shadow 50ms ease-out,
+    transform 100ms cubic-bezier(0.3, 0.6, 0.8, 1.25);
 }
 /* buttons */
 
@@ -198,7 +199,7 @@ h5 {
   align-items: center;
   justify-content: center;
   /* background-color: var(--color-links); */
-  color: #EFF5F5;
+  color: #eff5f5;
   background-color: #497174;
   font-family: var(--font-display);
   font-weight: bold;
@@ -227,7 +228,7 @@ h5 {
   --press: 1px;
   box-shadow: 0 calc(var(--shadow-size) - var(--press)) 0 0 var(--shadow-color);
   transform: translateY(var(--press));
-  background-color: #EFF5F5;
+  background-color: #eff5f5;
   color: #497174;
 }
 
@@ -251,10 +252,7 @@ form {
   width: 100%;
   color: #497174;
 }
-form > input
-{
-  color: #497174;
-}
+
 fieldset {
   margin: 0;
   padding: 0;
@@ -354,9 +352,8 @@ textarea {
 textarea[rows] {
   height: auto;
 }
-input
-{
-  color: black
+input {
+  color: black;
 }
 input:disabled,
 input[readonly],
