--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -50,7 +50,7 @@ body {
   margin: 0;
   color: var(--color-foreground);
   background-color: var(--color-background);
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
 }
 
 [data-light] {
