--- a/app/styles/task.css
+++ b/app/styles/task.css
@@ -76,9 +76,9 @@ header {
   border-radius: 4px;
   height: max-content;
   min-height: 400px;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
-.new
-{
+.new {
   background-color: #eff5f55a;
   color: #497174;
   margin-top: 10px;
@@ -87,8 +87,7 @@ header {
   padding: 10px;
   border-radius: 4px;
 }
-.new:hover
-{
+.new:hover {
   background-color: #4971745d;
 }
 .single-task {
@@ -99,9 +98,18 @@ header {
   height: 45px;
   padding: 10px;
   border-radius: 4px;
+  display: flex;
+  justify-content: space-between;
+  position: relative;
 }
-.Done-task
-{
+.btn-container {
+  background-color: red;
+  position: absolute;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+.Done-task {
   background-color: rgba(117, 216, 117, 0.59);
   color: #497174;
   margin-top: 10px;
@@ -111,20 +119,6 @@ header {
   border-radius: 4px;
 }
 
-
-.jokes-list {
-  max-width: 12rem;
-}
-
-.jokes-outlet {
-  flex: 1;
-}
-
-.jokes-footer {
-  padding-top: 2rem;
-  padding-bottom: 1rem;
-  border-top: 1px solid var(--color-border);
-}
 .add-task-container {
   backdrop-filter: blur(4px);
   position: absolute;
@@ -134,6 +128,27 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.single-task-container {
+  height: 100%;
+  position: absolute;
+  right: 0;
+  background-color: #eff5f5;
+  width: 40%;
+  bottom: 0;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  transition: all 1s;
+  padding :23px
+}
+.single-task-container:hover {
+  width: 42%;
+}
+.single-task-container-header
+{
+  width: 100%;
+  padding: 19px;
+  font-size: 24px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .add-task-form {
   width: 30%;
@@ -150,6 +165,7 @@ header {
   display: flex;
   justify-content: space-between;
 }
+
 
 @media print, (min-width: 640px) {
   .jokes-header .logo {
