--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -6,18 +6,9 @@
   font-family: "Comfortaa", cursive;
   font-family: "Montserrat", sans-serif;
   --hs-links: 48 100%;
-  --color-foreground: #497174;
-  --color-background: #d6e4e5;
+  --color-foreground: #ffffff;
+  --color-background: black;
   --color-links: hsl(var(--hs-links) 50%);
-  --color-links-hover: hsl(var(--hs-links) 45%);
-  --color-border: hsl(277, 85%, 38%);
-  --color-invalid: hsl(356, 100%, 71%);
-  /* --gradient-background: radial-gradient(
-      circle,
-      rgb(223, 187, 246) 0%,
-      rgba(118, 15, 181, 1) 35%,
-      rgba(58, 13, 85, 1) 100%
-    ); */
   color: hsl(0, 0%, 100%);
   background-image: radial-gradient(
     circle,
@@ -48,9 +39,10 @@ html,
 body {
   padding: 0;
   margin: 0;
-  color: var(--color-foreground);
-  background-color: var(--color-background);
+  color: var(--color-background);
+  background-color: var(--color-foreground);
   font-family: "Courier New", Courier, monospace;
+  border: 1px solid rgb(164, 164, 164);
 }
 
 [data-light] {
