--- a/app/styles/login.css
+++ b/app/styles/login.css
@@ -3,10 +3,11 @@
  * will get unloaded, so don't worry so much about conflicting styles between
  * pages!
  */
-
+ @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Pacifico&display=swap');
  body {
     background-image: var(--gradient-background);
     color: #497174;
+    
   }
   
   .container {
@@ -19,6 +20,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-family: 'Montserrat', sans-serif;;
   }
   
   .content {
@@ -28,6 +30,7 @@
     box-shadow: 0 0.2rem 1rem rgba(0, 0, 0, 0.5);
     width: 400px;
     max-width: 100%;
+    font-family: 'Montserrat', sans-serif;;
   }
   
   @media print, (min-width: 640px) {
@@ -39,11 +42,13 @@
   
   h1 {
     margin-top: 0;
+    font-family: 'Montserrat', sans-serif;;
   }
   
   fieldset {
     display: flex;
     justify-content: center;
+
   }
   
   fieldset > :not(:last-child) {
