--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -292,6 +292,7 @@ textarea {
   padding: 0.5rem 0.75rem;
   border-radius: 4px;
   background-color: rgb(255, 255, 255);
+  color: black;
   background-blend-mode: luminosity;
   box-shadow: none;
   font-family: var(--font-body);
